<resources>
    <string name="app_name">EventManager</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_event_list">Event list</string>
    <string name="menu_user_calendar">User calendar</string>
    <string name="menu_settings">User settings</string>
    <string name="user_profile">User profile</string>
    <string name="menu_user_logout">Logout</string>
    <string name="floating_action_button">Create event</string>
    <string name="event_time">Begins at: %1$s</string>
    <string name="event_address">Address: %1$s</string>
    <string name="event_picture">Event picture</string>
    <string name="date">Date</string>
    <string name="day">Day: </string>
    <string name="duration">Duration: %1$s h, %2$s m and %3$s s</string>
    <string name="organizer">Organizer: %1$s</string>
    <string name="event_info">Event information</string>
    <string name="time">Time: </string>
    <string name="public_event_sign_up">Sign up</string>
    <string name="log_in">Log In</string>
    <string name="log_in_text">Log in to unlock all the system\'s features!</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="server_client_id" translatable="false">666454225517-itbjsj8g0hp5rq3hmbcg8ieg4mi9o5s3.apps.googleusercontent.com</string>
    <string name="profileName" translatable="false">%1$s</string>
    <string name="email" translatable="false">%1$s</string>
    <string name="show_phone_number">Show phone number in profile details</string>
    <string name="app_version">App version</string>
    <string name="settings_image">Settings image</string>
    <string name="no_session_content">There is no existing session. Would you like to log in?</string>
    <string name="no_session_title">You are not authenticated!</string>
    <string name="facebook_app_id" translatable="false">1143189906271722</string>
    <string name="facebook_client_token" translatable="false">d8ff410b34a7cc9fc3f9b66ebef0a76d</string>
    <string name="events_organized_text_view">Events that you organized</string>
    <string name="events_participate_text_view">Events to which you will participate</string>
    <string name="no_connection">No Internet connection available</string>
    <string name="no_connection_message">This action cannot be performed because there is no internet connection available.</string>
    <string name="title_activity_event_creation">Event creation</string>
    <string name="first_fragment_label">Event creation</string>
    <string name="second_fragment_label">Event creation</string>
    <string name="previous">Previous</string>
    <string name="event_day">Day: %1$s</string>
    <string name="organizer_name">Organizer: %1$s</string>
    <string name="event_creation_title">Create an event</string>
    <string name="event_name_text_view">Event name</string>
    <string name="speak">Speak</string>
    <string name="insert_event_name">Insert event name</string>
    <string name="category_selection">Category selection</string>
    <string name="category_selection_text_view">Category: </string>
    <string name="private_event_creation">Private event</string>
    <string name="event_creation_next">Next</string>
    <string name="second_fragment_title">Insert starting date, starting hour and number of seats</string>
    <string name="begin_date">Begin date</string>
    <string name="starts_at">Starts at</string>
    <string name="venue">Venue</string>
    <string name="total_seats">Seats</string>
    <string name="add_row">Add row</string>
    <string name="confirm">Confirm</string>
    <string name="insert_date">Insert date… (DD/MM/YYYY)</string>
    <string name="insert_hour">Insert time… (HH:MM)</string>
    <string name="seats">Seats:</string>
    <string name="insert_seats">Insert number of seats…</string>
    <string name="incorrect_seats_format">Incorrect seats format</string>
    <string name="incorrect_date_format">Incorrect date format. The correct date format is GG/MM/AAAA.</string>
    <string name="incorrect_date_format_title">Incorrect date format</string>
    <string name="no_value">Some fields are empty.</string>
    <string name="no_value_title">Some fields are empty</string>
    <string name="incorrect_hour_format_title">Incorrect hour format</string>
    <string name="incorrect_hour_format">Incorrect hour format.</string>
    <string name="incorrect_location_format_title">Incorrect location format</string>
    <string name="incorrect_location_format">The given address is not valid.</string>
    <string name="insert_venue_address">Insert venue address</string>
    <string name="insert_address">Insert address…</string>
    <string name="insert_city">Insert city…</string>
    <string name="insert_postal_code">Insert postal code…</string>
    <string name="forward">Continue</string>
    <string name="insert_event_start_info">Insert the event\'s starting date, time and number of seats</string>
    <string name="insert_house_number">Insert House number…</string>
    <string name="province">Province</string>
    <string name="incorrect_province_format_title">Incorrect province format or value</string>
    <string name="incorrect_province_format">Incorrect province format or value.</string>
    <string name="no_location_result_title">No location found for the given address</string>
    <string name="no_location_result">No location found for the given address.</string>
    <string name="profile_image">Profile image</string>
    <string name="user_email" translatable="false">Email: %1$s</string>
    <string name="phone">Phone: %1$s</string>
    <string name="numEvOrg">You organized %1$d events</string>
    <string name="manage_your_events">Manage your events</string>
    <string name="average_rating_button">See your average rating</string>
    <string name="personal_rating">Personal rating</string>
    <string name="personal_rating_message">Your current rating is %1$.4f.</string>
    <string name="username">Username: %1$s</string>
    <string name="facebook_login_error">There was an error with your Facebook login. Try again later.</string>
    <string name="facebook_login_error_title">Login error</string>
    <string name="connect_facebook_account">An account with that email already exists. Would you like to connect your Facebook account?</string>
    <string name="email_conflict_facebook">Email address already registered</string>
    <string name="registrations_closed">Registrations closed!</string>
    <string name="event_details_fragment">Event details</string>
    <string name="login_error_title">Internet connection missing</string>
    <string name="login_error">Your internet connection is missing. We invite you to try again later.</string>
    <string name="show_reviews">Show reviews</string>
    <string name="show_ticket">Show ticket</string>
    <string name="qr_code_svg">QR code SVG</string>
    <string name="write_reviews">Write a review</string>
    <string name="withdraw_subscription">Delete event subscription</string>
    <string name="info_on_event">Information on the event %1$s</string>
    <string name="day_not_selectable">Day: %1$s</string>
    <string name="time_not_selectable">Time: %1$s</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="event_over">End event</string>
    <string name="cancel_event">Cancel event</string>
    <string name="event_search">Search similar events…</string>
    <string name="search_by_organizer_name">By organizer\'s name</string>
    <string name="search_by_event_name">By event\'s name</string>
    <string name="search">Search</string>
    <string name="both_fields_empty">Both fields are empty</string>
    <string name="fields_empty_message">At least one field must not be empty.</string>
    <string name="apply_filters">Apply filters</string>
    <string name="reset_filters">Reset filters</string>
    <string name="insert_org_name">Insert username</string>
    <string name="event_name_field_empty">Event name is empty</string>
    <string name="event_name_field_empty_message">The field \"event name\" cannot be empty if the user wants to filter events for event name.</string>
    <string name="org_name_field_empty">Field \"organizer name\" is empty</string>
    <string name="org_name_field_empty_message">The field \"organizer name\" cannot be empty if the user wants to use it to retrieve events based on its value.</string>
    <string name="event_registration_success_title">Success!</string>
    <string name="event_registration_success">The user has been successfully registrated to the event.</string>
    <string name="internal_server_error">Server error</string>
    <string name="service_unavailable">Our services are temporarily unavailable. Please try again later.</string>
    <string name="additional_information">Additional information</string>
    <string name="event_description">Event description</string>
    <string name="duration_info">Duration</string>
    <string name="add_event_image">Add event picture…</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="continue_forward">Continue</string>
    <string name="wrong_date">Incorrect date</string>
    <string name="date_less_than_current_date">The given date is less than the current date.</string>
    <string name="invalid_category">Invalid category</string>
    <string name="invalid_category_message">The selected category does not correspond to any valid value.</string>
    <string name="event_name_required">Event name required</string>
    <string name="event_name_required_message">The given event name is not a valid value.</string>
    <string name="no_province_selected">No province selected</string>
    <string name="invalid_province">The selected province is invalid. Please select a different value.</string>
    <string name="file_not_found">File not found</string>
    <string name="add_image_success">Image added successfully!</string>
    <string name="add_image_no_success">The image has not been added. Please try again.</string>
    <string name="write_reviews_button">Write reviews</string>
    <string name="none" translatable="false">---</string>
    <string name="sport" translatable="false">Sport</string>
    <string name="show">Show</string>
    <string name="event">Event</string>
    <string name="trip">Trip</string>
    <string name="other">Other</string>
    <string name="insert_category">Insert event category</string>
    <string name="reviews_fragment">Reviews</string>
    <string name="user_picture">User profile picture</string>
    <string name="user_name">Username: %1$s</string>
    <string name="evaluation">Rating:\n%1$.2f/10</string>
    <string name="show_all">Show all</string>
    <string name="review_description">Text</string>
    <string name="full_review_fragment">Full review</string>
    <string name="no_such_address">No address</string>
    <string name="address_not_registered">This address is not registered in Google Maps.</string>
    <string name="no_event_picture">No event picture</string>
    <string name="missing_event_image">The event\'s picture has not been selected.</string>
    <string name="no_event_description">Event description missing</string>
    <string name="missing_event_description">The event\'s description is missing.</string>
    <string name="wrong_duration">Wrong duration</string>
    <string name="wrong_duration_value">The values for the days, the hours and the minutes cannot be negative.</string>
    <string name="illegal_duration_format">Illegal duration format</string>
    <string name="illegal_duration_format_message">An illegal value has been inserted for one or more of the fields \"days\", \"hours\" or \"minutes\". Please insert only positive integer values for those fields.</string>
</resources>