<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_event_list"
            android:icon="@drawable/ic_event_calendar"
            android:title="@string/menu_event_list"
            android:onClick="hideAllFragments" />
        <item
            android:id="@+id/nav_user_calendar"
            android:icon="@drawable/ic_user_calendar"
            android:title="@string/menu_user_calendar"
            android:onClick="hideAllFragments" />
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/ic_user_profile"
            android:title="@string/user_profile"
            android:onClick="hideAllFragments" />
        <item
            android:id="@+id/nav_user_settings"
            android:icon="@drawable/ic_user_settings"
            android:title="@string/menu_settings"
            android:onClick="hideAllFragments" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_user_logout"
            android:title="@string/menu_user_logout"
            android:onClick="revokeAccess"/>
    </group>
</menu>