<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_event_list">

    <fragment
        android:id="@+id/nav_event_list"
        android:name="it.disi.unitn.lpsmt.progetto.lasagna.eventmanager.eventmanager.ui.event_list.EventListFragment"
        android:label="@string/menu_event_list"
        tools:layout="@layout/fragment_event_list" />

    <fragment
        android:id="@+id/nav_user_calendar"
        android:name="it.disi.unitn.lpsmt.progetto.lasagna.eventmanager.eventmanager.ui.user_calendar.UserCalendarFragment"
        android:label="@string/menu_user_calendar"
        tools:layout="@layout/fragment_user_calendar" />

    <fragment
        android:id="@+id/user_calendar_dialog"
        android:name="it.disi.unitn.lpsmt.progetto.lasagna.eventmanager.eventmanager.ui.user_calendar.event_dialog.EventDialog"
        android:label="@string/menu_user_calendar"
        tools:layout="@layout/fragment_calendar_dialog" />

    <fragment
        android:id="@+id/nav_user_settings"
        android:name="it.disi.unitn.lpsmt.progetto.lasagna.eventmanager.eventmanager.ui.menu_settings.MenuSettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_menu_settings" />

    <fragment
        android:id="@+id/nav_user_profile"
        android:name="it.disi.unitn.lpsmt.progetto.lasagna.eventmanager.eventmanager.ui.user_profile.UserProfileFragment"
        android:label="@string/user_profile"
        tools:layout="@layout/fragment_user_profile" />

</navigation>